--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "build": "yarn build:leading-angular && yarn build:tip-calculator-app",
+    "build:leading-angular": "ng build --base-href /",
+    "build:tip-calculator-app": "ng build --project=tip-calculator-app --output-hashing=none --single-bundle",
+    "watch": "ng build --watch --configuration development --output-hashing=none --single-bundle",
+    "test": "ng test",
+    "storybook": "ng run tip-calculator-app:storybook",
+    "build-storybook": "build-storybook",
+    "postinstall:bak": "",
+    "postinstall": "ngcc"
   },
   "private": true,
   "dependencies": {
@@ -14,10 +20,14 @@
     "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
+    "@angular/elements": "^13.3.9",
     "@angular/forms": "~13.3.0",
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@webcomponents/custom-elements": "^1.5.0",
+    "document-register-element": "^1.14.10",
+    "ngx-build-plus": "^13.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -26,14 +36,30 @@
     "@angular-devkit/build-angular": "~13.3.6",
     "@angular/cli": "~13.3.6",
     "@angular/compiler-cli": "~13.3.0",
+    "@babel/core": "^7.18.0",
+    "@compodoc/compodoc": "^1.1.19",
+    "@storybook/addon-actions": "^6.5.5",
+    "@storybook/addon-essentials": "^6.5.5",
+    "@storybook/addon-interactions": "^6.5.5",
+    "@storybook/addon-links": "^6.5.5",
+    "@storybook/angular": "^6.5.5",
+    "@storybook/builder-webpack5": "^6.5.5",
+    "@storybook/manager-webpack5": "^6.5.5",
+    "@storybook/preset-scss": "^1.0.3",
+    "@storybook/testing-library": "^0.0.11",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "babel-loader": "^8.2.5",
+    "css-loader": "^6.7.1",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "sass": "^1.52.1",
+    "sass-loader": "^13.0.0",
+    "style-loader": "^3.3.1",
     "typescript": "~4.6.2"
   }
 }
